8036672: G1: alloc_purpose in copy_to_survivor_space() used incorrectly

Reviewed-by: brutisso, tschatzl